Added banner and popularity sections

--- a/index.html
+++ b/index.html
@@ -23,8 +23,47 @@
                 </ul>
             </nav>
         </div>
-
     </header>
+
+    <main>
+        <section class="banner">
+            <div class="banner__text">
+                <h1 class="banner__title">Sell More!</h1>
+                <p class="banner__description">Opne shop on uor platform and increase your sales</p>
+                <a class="button" href="">Open your shop</a>
+            </div>
+            <div class="banner__picture"></div>
+        </section>
+        <section class="popularity">
+            <div class="container">
+                <h2>The most popular sales platform in country</h2>
+                <div class="popularity__content">
+                    <article class="popularity__article">
+                        <div class="popularity__icon_basic">
+                            <img class="popularity__icon" src="./images/Person.svg" alt="Person">
+                        </div>
+                        <p><span>100000+</span></p>
+                        <p>daily entries</p>
+                    </article>
+                    <article class="popularity__article">
+                        <div class="popularity__icon_professional">
+                            <img class="popularity__icon" src="./images/Eye.svg" alt="Eye">
+                        </div>
+                        <p><span>2000000+</span></p>
+                        <p>seen products every day</p>
+                    </article>
+                    <article class="popularity__article">
+                        <div class="popularity__icon_premium">
+                            <img class="popularity__icon" src="./images/Catalog.svg" alt="Catalog">
+                        </div>
+                        <p><span>10000+</span></p>
+                        <p>added posts daily</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="advantages"></section>
+    </main>
 </body>
 
 </html>
