--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
             <div class="banner__picture"></div>
         </section>
+
         <section class="popularity">
             <div class="container">
                 <h2>The most popular sales platform in country</h2>
@@ -62,7 +63,112 @@
                 </div>
             </div>
         </section>
-        <section class="advantages"></section>
+
+        <section class="advantages">
+            <div class="container">
+                <article class="advantages__article advantages__article_basic">
+                    <div class="advantages__first">
+                        <div class="advantages_figure">
+                            <img src="./images/Macbook2.png" class="advantages_image" />
+                        </div>
+                    </div>
+                    <div class="adventages__second">
+                        <h3>Be always first</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="line line_basic"></div>
+                    </div>
+                </article>
+                <article class="advantages__article advantages__article_professional">
+                    <div class="advantages__first">
+                        <div class="advantages_figure">
+                            <img src="./images/iPhone2.png" class="advantages_image" />
+                        </div>
+                    </div>
+                    <div class="adventages__second">
+                        <h3>Your shop is where you are!</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="line line_professional"></div>
+                    </div>
+                </article>
+                <article class="advantages__article advantages__article_premium">
+                    <div class="advantages__first">
+                        <h3>Increase recognition your brand!</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="line line_premium"></div>
+                    </div>
+                    <div class="adventages__second">
+                        <div class="advantages_figure">
+                            <img src="./images/Trumpet.png" class="advantages_image" />
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section class="pricing">
+            <div class="container">
+                <h3>Pricing</h3>
+            </div>
+
+            <div class="container container_basic">
+                <article class="pricing__article pricing__article_basic">
+                    <div class="pricing__type">
+                        <h4 class="pricing__title">Basic</h4>
+                        <span class="pricing__price">$0</span>
+                        <!-- <span class="pricing__amount">Limited offer</span> -->
+                    </div>
+                    <div class="pricing__features">
+                        <ul>
+                            <li>100 MB HDD</li>
+                            <li>1 Subdomain</li>
+                            <li>2 E-mails</li>
+                            <li>Two years license</li>
+                            <li>Full support</li>
+                        </ul>
+                    </div>
+                </article>
+                <a class="pricing__button pricing__button_basic" href="">Begin</a>
+            </div>
+
+            <div class="container container_professional">
+                <article class="pricing__article pricing__article_professional">
+                    <div class="pricing__type">
+                        <h4 class="pricing__title">Professional</h4>
+                        <span class="pricing__price">$25</span>
+                        <span class="pricing__amount">Limited offer</span>
+                    </div>
+                    <div class="pricing__features">
+                        <ul>
+                            <li>500 MB HDD</li>
+                            <li>2 Subdomains</li>
+                            <li>5 E-mails</li>
+                            <li>One years license</li>
+                            <li>Full support</li>
+                        </ul>
+                    </div>
+                </article>
+                <a class="pricing__button pricing__button_professional" href="">Begin</a>
+            </div>
+
+            <div class="container container_premium">
+                <article class="pricing__article pricing__article_premium">
+                    <div class="pricing__type">
+                        <h4 class="pricing__title">Premium</h4>
+                        <span class="pricing__price">$0</span>
+                        <span class="pricing__amount">Limited offer</span>
+                    </div>
+                    <div class="pricing__features">
+                        <ul>
+                            <li>2 GB HDD</li>
+                            <li>5 Subdomains</li>
+                            <li>20 E-mails</li>
+                            <li>Two years license</li>
+                            <li>Full support</li>
+                        </ul>
+                    </div>
+                </article>
+                <a class="pricing__button pricing__button_premium" href="">Begin</a>
+            </div>
+        </section>
     </main>
 </body>
 
