Adden close and  check icons. Fixed banner and pricing section for mobile devices

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 
     <main>
         <section class="banner">
-            <div class="banner__text">
-                <h1 class="banner__title">Sell More!</h1>
-                <p class="banner__description">Opne shop on uor platform and increase your sales</p>
-                <a class="button" href="">Open your shop</a>
+            <div class="container">
+                <div class="banner__text">
+                    <h1 class="banner__title">Sell More!</h1>
+                    <p class="banner__description">Opne shop on uor platform and increase your sales</p>
+                    <a class="button" href="">Open your shop</a>
+                </div>
             </div>
             <div class="banner__picture"></div>
         </section>
@@ -118,11 +120,11 @@
                     </div>
                     <div class="pricing__features">
                         <ul>
-                            <li>100 MB HDD</li>
-                            <li>1 Subdomain</li>
-                            <li>2 E-mails</li>
-                            <li>Two years license</li>
-                            <li>Full support</li>
+                            <li><span class="icon icon-check"></span> 100 MB HDD</li>
+                            <li><span class="icon icon-check"></span> 1 Subdomain</li>
+                            <li><span class="icon icon-check"></span> 2 E-mails</li>
+                            <li><span class="icon icon-close"></span> Two years license</li>
+                            <li><span class="icon icon-close"></span> Full support</li>
                         </ul>
                     </div>
                 </article>
@@ -138,11 +140,11 @@
                     </div>
                     <div class="pricing__features">
                         <ul>
-                            <li>500 MB HDD</li>
-                            <li>2 Subdomains</li>
-                            <li>5 E-mails</li>
-                            <li>One years license</li>
-                            <li>Full support</li>
+                            <li><span class="icon icon-check"></span> 500 MB HDD</li>
+                            <li><span class="icon icon-check"></span> 2 Subdomains</li>
+                            <li><span class="icon icon-check"></span> 5 E-mails</li>
+                            <li><span class="icon icon-check"></span> One years license</li>
+                            <li><span class="icon icon-close"></span> Full support</li>
                         </ul>
                     </div>
                 </article>
@@ -158,11 +160,11 @@
                     </div>
                     <div class="pricing__features">
                         <ul>
-                            <li>2 GB HDD</li>
-                            <li>5 Subdomains</li>
-                            <li>20 E-mails</li>
-                            <li>Two years license</li>
-                            <li>Full support</li>
+                            <li><span class="icon icon-check"></span> 2 GB HDD</li>
+                            <li><span class="icon icon-check"></span> 5 Subdomains</li>
+                            <li><span class="icon icon-check"></span> 20 E-mails</li>
+                            <li><span class="icon icon-check"></span> Two years license</li>
+                            <li><span class="icon icon-check"></span> Full support</li>
                         </ul>
                     </div>
                 </article>
