--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <h3>Pricing</h3>
             </div>
             <div class="container pricing__articles">
-                <div class="container container_basic">
+                <div class="container_basic">
                     <article class="pricing__article pricing__article_basic">
                         <div class="pricing__type">
                             <h4 class="pricing__title">Basic</h4>
@@ -130,7 +130,7 @@
                     <a class="pricing__button pricing__button_basic" href="">Begin</a>
                 </div>
     
-                <div class="container container_professional">
+                <div class="container_professional">
                     <article class="pricing__article pricing__article_professional">
                         <div class="pricing__type">
                             <h4 class="pricing__title">Professional</h4>
@@ -150,7 +150,7 @@
                     <a class="pricing__button pricing__button_professional" href="">Begin</a>
                 </div>
     
-                <div class="container container_premium">
+                <div class="container_premium">
                     <article class="pricing__article pricing__article_premium">
                         <div class="pricing__type">
                             <h4 class="pricing__title">Premium</h4>
